--- a/imports/ui/main/index.html
+++ b/imports/ui/main/index.html
@@ -9,7 +9,8 @@
       {{#if currentUser}}
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" data-template="customUserFields">Insert/Update</a></li>
+            <li class="{{#if $eq template 'customUserFields'}}active{{/if}}" data-template="customUserFields"><a href="#">Insert/Update</a></li>
+            <li  class="{{#if $eq template 'editCustomUserFields'}}active{{/if}}" data-template="editCustomUserFields"><a href="#">Edit</a></li>
           </ul>
         </div>
       {{/if}}
